src/styles/main.css
@import "tailwindcss";

html,
body,
#app {
   height: 100vh;
   width: 100vw;
}

html.dark {
   color-scheme: dark;
}

body {
   /* overflow: hidden; */
}

/* For print CSS */
.page-break {
   page-break-after: always;
   page-break-before: always;
}

/* vue transitions */
.fade-zoom-enter-active,
.fade-zoom-leave-active {
   transition:
      opacity 0.2s ease,
      transform 0.3s ease;
}

.fade-zoom-enter-from,
.fade-zoom-leave-to {
   opacity: 0;
   transform: scale(0.9);
}

.fade-zoom-enter-to,
.fade-zoom-leave-from {
   opacity: 1;
   transform: scale(1);
}

/* override tailwind's container class */
.container {
   --padding: 2rem;
   width: 100%;
   @media (width < 40rem) {
      max-width: calc(100% - var(--padding));
   }
   @media (width >= 40rem) {
      max-width: calc(40rem - var(--padding));
   }
   @media (width >= 48rem) {
      max-width: calc(48rem - var(--padding));
   }
   @media (width >= 64rem) {
      max-width: calc(64rem - var(--padding));
   }
   @media (width >= 80rem) {
      max-width: calc(80rem - var(--padding));
   }
   @media (width >= 96rem) {
      max-width: calc(96rem - var(--padding));
   }
}

.n-tooltip {
   pointer-events: none;
}

.table-with-custom-row thead {
   display: none !important;
}

.table-with-custom-row tr,
.table-with-custom-row th,
.table-with-custom-row td {
   background: transparent !important;
}

.table-with-custom-row th,
.table-with-custom-row td {
   padding: 0 !important;
   padding-top: 0.25rem !important;
   padding-bottom: 0.25rem !important;
   border: 0 !important;
}

.link {
   @apply hover:underline;
}

